crates: move root lifecycle crate to it's own folder

--- a/lifecycle/Cargo.toml
+++ b/lifecycle/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "component"
+name = "lifecycle"
 version = "0.1.0"
 authors = ["Otávio Pace <otaviopp8@gmail.com>"]
 edition = "2018"
