--- a/lifecycle/Cargo.toml
+++ b/lifecycle/Cargo.toml
@@ -2,6 +2,7 @@
 name = "lifecycle"
 version = "0.1.0"
 authors = ["Otávio Pace <otaviopp8@gmail.com>"]
+description = "Rust implementation of https://github.com/stuartsierra/component"
 edition = "2018"
 readme = "README.md"
 keywords = ["lifecycle", "clojure", "component", "system"]
