--- a/derive-system/Cargo.toml
+++ b/derive-system/Cargo.toml
@@ -15,7 +15,7 @@ license = "MIT"
 proc-macro = true
 
 [dependencies]
-lifecycle = { path = "../lifecycle" }
+lifecycle = { path = "../lifecycle", version = "0.1.0" }
 syn = "1.0"
 quote = "1.0"
 proc-macro2 = "1.0"
